fix icon z-index issue

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -4,6 +4,7 @@
   width: 100%;
   top: 6.8rem;
   box-shadow: 0 1.6rem 0 0 rgba($white, .2), 0 .8rem 0 0 rgba($white, .6);
+  z-index: 1;
 }
 
 .nav-list {
